added navbar and jumbotron

--- a/index.html
+++ b/index.html
@@ -13,7 +13,32 @@
   </head>
 
   <body>
-    <h1>Hello, world!</h1>
+    
+    <!-- Navbar Starts -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light flex-row-reverse">
+      <a class="navbar-brand" href="#">Moqups</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" href="#">Speakers <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Tickets</a>
+          <a class="nav-link" href="#">Venue</a>
+        </div>
+      </div>
+    </nav>
+    <!-- Navbar ends -->
+
+    <!-- Jumbotron starts -->
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Fluid jumbotron</h1>
+        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      </div>
+    </div>
+    <!-- Jumbotron ends -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
